--- a/gui/frontend/src/main.css
+++ b/gui/frontend/src/main.css
@@ -42,18 +42,41 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgb(228, 228, 228);
+  background-color: rgb(60, 60, 60);
 }
 
 #info {
   flex: 2;
   display: flex;
   flex-direction: column;
+  padding: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+#renderContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#render {
+  padding: 0px;
+  margin: 0px;
+  background-color: transparent;
+  margin: auto;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 #files {
   flex: 0 0 450px;
-  background-color: white;
+  background-color: rgb(35, 35, 35);
   padding: 30px;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
@@ -74,7 +97,7 @@ body {
   display: inline-block;
   width: 50%;
   height: 100%;
-  border: 1px solid rgb(180, 180, 180);
+  border: 1px solid rgb(170, 170, 170);
   background-color: transparent;
   transition: all 0.2s;
   text-align: center;
@@ -84,13 +107,16 @@ body {
 
 .select svg {
   height: 20px;
-  fill: rgb(180, 180, 180);
+  fill: rgb(170, 170, 170);
+  transition: all 0.2s;
 }
 
 .select:hover {
   cursor: pointer;
-  color: rgb(150, 150, 150);
-  border-color: rgb(150, 150, 150);
+}
+
+.select:hover svg {
+  fill: #48ac62;
 }
 
 .select:active {
@@ -110,7 +136,7 @@ body {
 
 #list {
   flex: 6;
-  border: 1px solid rgb(150, 150, 150);
+  border: 1px solid rgb(200, 200, 200);
   border-radius: 10px;
   margin-bottom: 20px;
   overflow: scroll;
@@ -118,7 +144,7 @@ body {
 
 #help {
   text-align: center;
-  color: #85ce98;
+  color: #48ac62;
   font-size: 13px;
 }
 
@@ -126,7 +152,7 @@ body {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  border-bottom: 1px solid rgb(180, 180, 180);
+  border-bottom: 1px solid rgb(170, 170, 170);
   display: flex;
   align-items: center;
 }
@@ -152,7 +178,7 @@ body {
   font-size: 13px;
   padding-left: 5px;
   flex: 1;
-  color: rgb(150, 150, 150);
+  color: rgb(170, 170, 170);
   display: flex;
   align-items: center;
 }
@@ -170,7 +196,7 @@ body {
   text-align: right;
   font-size: 13px;
   flex: 0 0 40px;
-  color: rgb(150, 150, 150);
+  color: rgb(170, 170, 170);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -225,7 +251,7 @@ body {
 
 .itemcontrols button svg {
   width: 20px;
-  fill: rgb(150, 150, 150);
+  fill: rgb(170, 170, 170);
   transition: all 0.2s;
 }
 
@@ -247,7 +273,7 @@ body {
 
 #settings svg {
   width: 30px;
-  fill: rgb(150, 150, 150);
+  fill: rgb(200, 200, 200);
   margin: 0px;
 }
 
@@ -266,7 +292,7 @@ body {
   border: 2px solid;
   margin: 10px;
   background-color: transparent;
-  border: 1px solid rgb(180, 180, 180);
+  border: 1px solid rgb(170, 170, 170);
   border-radius: 2px;
   transition: 0.2s all;
   display: flex;
@@ -280,8 +306,8 @@ body {
   padding-right: 2px;
   top: -8px;
   left: 3px;
-  color: rgb(180, 180, 180);
-  background-color: white;
+  color: rgb(170, 170, 170);
+  background-color: rgb(35, 35, 35);
   transition: 0.2s all;
 }
 
@@ -289,7 +315,7 @@ body {
   border: none;
   margin: 0px;
   padding: 0px;
-  color: rgb(180, 180, 180);
+  color: rgb(170, 170, 170);
   width: 50px;
   height: 15px;
   font-size: 13px;
@@ -297,6 +323,7 @@ body {
   transition: 0.2s all;
   box-sizing: border-box;
   font-family: 'Quicksand';
+  background-color: transparent;
 }
 
 .input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
@@ -336,11 +363,11 @@ body {
 }
 
 #start:hover {
-  background-color: #429c5a;
+  background-color: rgb(85, 180, 111);
   cursor: pointer;
 }
 
 #start:active {
-  background-color: #4eb86a;
+  background-color: rgb(66, 161, 91);
   cursor: pointer;
 }
