--- a/gui/frontend/src/main.css
+++ b/gui/frontend/src/main.css
@@ -42,7 +42,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(45, 45, 45);
 }
 
 #info {
@@ -76,7 +76,7 @@ body {
 
 #files {
   flex: 0 0 450px;
-  background-color: rgb(35, 35, 35);
+  background-color: rgb(20, 20, 20);
   padding: 30px;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
@@ -97,7 +97,7 @@ body {
   display: inline-block;
   width: 50%;
   height: 100%;
-  border: 1px solid rgb(170, 170, 170);
+  border: 1px solid rgb(160, 160, 160);
   background-color: transparent;
   transition: all 0.2s;
   text-align: center;
@@ -107,7 +107,7 @@ body {
 
 .select svg {
   height: 20px;
-  fill: rgb(170, 170, 170);
+  fill: rgb(160, 160, 160);
   transition: all 0.2s;
 }
 
@@ -116,7 +116,7 @@ body {
 }
 
 .select:hover svg {
-  fill: #48ac62;
+  fill: white;
 }
 
 .select:active {
@@ -136,7 +136,7 @@ body {
 
 #list {
   flex: 6;
-  border: 1px solid rgb(200, 200, 200);
+  border: 1px solid white;
   border-radius: 10px;
   margin-bottom: 20px;
   overflow: scroll;
@@ -144,7 +144,7 @@ body {
 
 #help {
   text-align: center;
-  color: #48ac62;
+  color: rgb(160, 160, 160);
   font-size: 13px;
 }
 
@@ -152,7 +152,7 @@ body {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  border-bottom: 1px solid rgb(170, 170, 170);
+  border-bottom: 1px solid rgb(160, 160, 160);
   display: flex;
   align-items: center;
 }
@@ -178,7 +178,7 @@ body {
   font-size: 13px;
   padding-left: 5px;
   flex: 1;
-  color: rgb(170, 170, 170);
+  color: rgb(160, 160, 160);
   display: flex;
   align-items: center;
 }
@@ -196,7 +196,7 @@ body {
   text-align: right;
   font-size: 13px;
   flex: 0 0 40px;
-  color: rgb(170, 170, 170);
+  color: rgb(160, 160, 160);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -213,7 +213,9 @@ body {
 .itemcontrols {
   flex: 0;
   display: flex;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .itemcontrols button {
@@ -251,7 +253,7 @@ body {
 
 .itemcontrols button svg {
   width: 20px;
-  fill: rgb(170, 170, 170);
+  fill: rgb(160, 160, 160);
   transition: all 0.2s;
 }
 
@@ -273,7 +275,7 @@ body {
 
 #settings svg {
   width: 30px;
-  fill: rgb(200, 200, 200);
+  fill: rgb(160, 160, 160);
   margin: 0px;
 }
 
@@ -292,7 +294,7 @@ body {
   border: 2px solid;
   margin: 10px;
   background-color: transparent;
-  border: 1px solid rgb(170, 170, 170);
+  border: 1px solid rgb(160, 160, 160);
   border-radius: 2px;
   transition: 0.2s all;
   display: flex;
@@ -306,8 +308,8 @@ body {
   padding-right: 2px;
   top: -8px;
   left: 3px;
-  color: rgb(170, 170, 170);
-  background-color: rgb(35, 35, 35);
+  color: rgb(160, 160, 160);
+  background-color: rgb(20, 20, 20);
   transition: 0.2s all;
 }
 
@@ -315,7 +317,7 @@ body {
   border: none;
   margin: 0px;
   padding: 0px;
-  color: rgb(170, 170, 170);
+  color: rgb(160, 160, 160);
   width: 50px;
   height: 15px;
   font-size: 13px;
@@ -370,4 +372,20 @@ body {
 #start:active {
   background-color: rgb(66, 161, 91);
   cursor: pointer;
+}
+
+/* https://stackoverflow.com/a/4407335 */
+
+.noselect {
+  cursor: default;
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
