--- a/gui/frontend/src/main.css
+++ b/gui/frontend/src/main.css
@@ -42,7 +42,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgb(45, 45, 45);
+  background-color: rgb(35, 35, 35);
 }
 
 #info {
@@ -76,7 +76,7 @@ body {
 
 #files {
   flex: 0 0 450px;
-  background-color: rgb(20, 20, 20);
+  background-color: rgb(15, 15, 15);
   padding: 30px;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
@@ -309,7 +309,7 @@ body {
   top: -8px;
   left: 3px;
   color: rgb(160, 160, 160);
-  background-color: rgb(20, 20, 20);
+  background-color: rgb(15, 15, 15);
   transition: 0.2s all;
 }
 
@@ -357,8 +357,7 @@ body {
   border: none;
   margin: 0px;
   padding: 7px;
-  padding-left: 12px;
-  padding-right: 12px;
+  width: 50px;
   border-radius: 5px;
   transition: 0.2s all;
   font-family: 'Quicksand';
